--- a/student_loans_with_deep_learning.ipynb
+++ b/student_loans_with_deep_learning.ipynb
@@ -1430,16 +1430,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "OCET2mvW6q61"
       },
       "outputs": [],
       "source": [
         "# Set the model's file path\n",
+        "path = Path(\"student_loans.keras\")\n",
         "\n",
-        "\n",
-        "# Load the model to a new object\n"
+        "# Load the model to a new object\n",
+        "nn_model_loaded = tf.keras.models.load_model(path)"
       ]
     },
     {
@@ -1453,61 +1454,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vet7qjgx6q62",
-        "outputId": "0925af42-7e12-4978-8396-2a2c1580e1eb"
+        "outputId": "b61fb46f-0ab9-4d89-d2cc-7095b1754cbc"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "13/13 - 0s - 126ms/epoch - 10ms/step\n"
+            "13/13 - 0s - 71ms/epoch - 5ms/step\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.63573396],\n",
-              "       [0.41001907],\n",
-              "       [0.88199055],\n",
-              "       [0.61770827],\n",
-              "       [0.9708398 ]], dtype=float32)"
+              "array([[0.3902565 ],\n",
+              "       [0.19554588],\n",
+              "       [0.6204802 ],\n",
+              "       [0.70123684],\n",
+              "       [0.9888822 ]], dtype=float32)"
             ]
           },
-          "execution_count": 18,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
       "source": [
         "# Make predictions with the test data\n",
+        "predictions = nn_model_loaded.predict(X_test_scaled,verbose=2)\n",
         "\n",
-        "\n",
-        "# Display a sample of the predictions\n"
+        "# Display a sample of the predictions\n",
+        "predictions[0:5]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
         "id": "87o8exFPhjfl",
-        "outputId": "da5339c5-cea7-43e4-ec22-e168ea16dfa2"
+        "outputId": "15ca7edc-9f38-4c62-a58e-fbbfd5e6ef18"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "     predictions\n",
+              "0            0.0\n",
+              "1            0.0\n",
+              "2            1.0\n",
+              "3            1.0\n",
+              "4            1.0\n",
+              "..           ...\n",
+              "395          1.0\n",
+              "396          0.0\n",
+              "397          1.0\n",
+              "398          0.0\n",
+              "399          1.0\n",
+              "\n",
+              "[400 rows x 1 columns]"
+            ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b764d2b2-92a0-4966-87c3-cf2a7be385d8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e185319c-3fae-46fd-a0fa-69d19c4614e8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1532,7 +1551,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1572,7 +1591,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>399</th>\n",
-              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1581,7 +1600,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b764d2b2-92a0-4966-87c3-cf2a7be385d8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e185319c-3fae-46fd-a0fa-69d19c4614e8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1633,12 +1652,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b764d2b2-92a0-4966-87c3-cf2a7be385d8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e185319c-3fae-46fd-a0fa-69d19c4614e8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b764d2b2-92a0-4966-87c3-cf2a7be385d8');\n",
+              "        const element = document.querySelector('#df-e185319c-3fae-46fd-a0fa-69d19c4614e8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1658,8 +1677,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c8bb016b-0816-49d7-917e-bb5329b4b9ea\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c8bb016b-0816-49d7-917e-bb5329b4b9ea')\"\n",
+              "<div id=\"df-8f6aadf4-4114-4a39-9467-23df290ab494\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8f6aadf4-4114-4a39-9467-23df290ab494')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1778,39 +1797,116 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c8bb016b-0816-49d7-917e-bb5329b4b9ea button');\n",
+              "        document.querySelector('#df-8f6aadf4-4114-4a39-9467-23df290ab494 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
+              "\n",
+              "  <div id=\"id_42fa8216-729d-4982-a6ff-a2927d25b77c\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('predictions_df')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_42fa8216-729d-4982-a6ff-a2927d25b77c button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('predictions_df');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
               "    </div>\n",
               "  </div>\n"
             ],
-            "text/plain": [
-              "     predictions\n",
-              "0            1.0\n",
-              "1            0.0\n",
-              "2            1.0\n",
-              "3            1.0\n",
-              "4            1.0\n",
-              "..           ...\n",
-              "395          1.0\n",
-              "396          0.0\n",
-              "397          1.0\n",
-              "398          0.0\n",
-              "399          0.0\n",
-              "\n",
-              "[400 rows x 1 columns]"
-            ]
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "predictions_df",
+              "summary": "{\n  \"name\": \"predictions_df\",\n  \"rows\": 400,\n  \"fields\": [\n    {\n      \"column\": \"predictions\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          1.0,\n          0.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
           },
-          "execution_count": 19,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 25
         }
       ],
       "source": [
-        "# Save the predictions to a DataFrame and round the predictions to binary results\n"
+        "# Save the predictions to a DataFrame and round the predictions to binary results\n",
+        "predictions_df = pd.DataFrame(predictions.round(), columns=[\"predictions\"])\n",
+        "\n",
+        "# Display a sample of the DataFrame\n",
+        "predictions_df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions_df.value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AVW3_WsB1ttm",
+        "outputId": "342fa8bc-17ad-42d3-85a1-da69bce86e01"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "predictions\n",
+              "0.0            204\n",
+              "1.0            196\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
       ]
     },
     {
@@ -1824,33 +1920,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UTxYZibW6q67",
-        "outputId": "f341b396-9b4c-478c-dba8-f6d904ba10e3"
+        "outputId": "6b3036c1-5d40-418a-979d-a91dccf2b57b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.70      0.76      0.73       188\n",
-            "           1       0.77      0.72      0.74       212\n",
+            "           0       0.72      0.78      0.74       188\n",
+            "           1       0.79      0.73      0.75       212\n",
             "\n",
-            "    accuracy                           0.73       400\n",
-            "   macro avg       0.74      0.74      0.73       400\n",
-            "weighted avg       0.74      0.73      0.74       400\n",
+            "    accuracy                           0.75       400\n",
+            "   macro avg       0.75      0.75      0.75       400\n",
+            "weighted avg       0.75      0.75      0.75       400\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "# Print the classification report with the y test data and predictions\n"
+        "# Print the classification report with the y test data and predictions\n",
+        "print(classification_report(y_test, predictions_df))"
       ]
     },
     {
